--- a/my_app/Gemfile
+++ b/my_app/Gemfile
@@ -23,6 +23,10 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
+group :development do
+  gem 'rspec-rails', '~> 3.2.1'
+end
+
 group :test do
   gem 'rspec', '~> 3.2.0'
   gem 'webrat', '~> 0.7.3'
